More UI improvements and colors